--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ atomicwrites==1.3.0
 attrs==19.3.0
 autopep8==1.5.2
 colorama==0.4.3
+dj-database-url==0.5.0
 Django==3.0.5
+gunicorn==20.0.4
 more-itertools==8.2.0
 packaging==20.3
 pluggy==0.13.1
@@ -15,3 +17,5 @@ pytz==2019.3
 six==1.14.0
 sqlparse==0.3.1
 wcwidth==0.1.9
+whitenoise==5.0.1
+psycopg2==2.8.5
